WIP: stop jobs after reading all event records
* Rename forms since they were different in the form_namespace set in Bambanani.